another day in the office

--- a/notas.tex
+++ b/notas.tex
@@ -65,6 +65,9 @@
 \newcommand{\here}{\h{\hspace{15cm}} }
 \newcommand{\rhoi}{\dyad{\psii}{\psii}}
 \newcommand{\ind}[2]{{{}^{#1}_{#2}}}
+\newcommand{\QH}{\abs{Q_H}}
+\newcommand{\QL}{\abs{Q_L}}
+\newcommand{\W}{\abs{W}}
 
 \def\dbar{{\mathchar'26\mkern-12mu d}}
 
