shit, stat-mec has been more difficult than expected

--- a/stat-mec.tex
+++ b/stat-mec.tex
@@ -20,4 +20,26 @@
 	de microestados en los que se puede encontrar el sistema.
 	El macroestado con la mayor cantidad de microestados 
 	se dice que es el más probable.
+	
+	\item $S=k\ln \Omega$: entropía absoluta en términos del número
+	total de microestados accesibles según el macroestado del sistema.
+	
+	\item De la fórmula que enunció Planck sobre la entropía (ya había
+	sido formulada por Boltzmann, pero fue Planck quien la escribió en la
+	forma moderna) se desprende que la entropía se hace cero cuando 
+	el sistema puede encontrarse en una sola configuración.
+	
+	\item \textbf{El gas ideal clásico}: dado que asumimos que las 
+	partículas no interactúan entre sí dentro del gas, entonces
+	\begin{align}
+	\Omega (N,E,V)\propto V^N,
+	\end{align}
+	y esto nos lleva a que 
+	\begin{align}
+	\pdv{S}{V}&=\frac{P}{T}=k\qty(\pdv{\ln \Omega \qty(N,E,V)}{V})_{N,E}=
+	k\frac{N}{V}  \\
+	PV&=kNT = nRT \hspace{1.5cm} (R=kN_A),
+	\end{align}
+	así hemos llegado a la ecuación de estado del gas ideal desde 
+	principios estadísticos.
 \end{itemize}
