Impressed with virial and equipartition, little confused with canonical

--- a/stat-mec.tex
+++ b/stat-mec.tex
@@ -164,6 +164,8 @@
 	  \label{fig:liouville}
 	\end{figure}
 	
+	\item \textbf{Ensamble canónico:} $E=$ cte.
+	
 	\item \textbf{El ensamble microcanónico:}
 	El macroestado del ensamble microcanónico de un sistema está 
 	definido por el número de moléculas $N$, el volumen $V$ y la 
@@ -177,4 +179,36 @@
 	H(q,p)\leq
 	\qty(E+\frac{1}{2}\Delta).
 	\end{align}
+	
+	\item El resultado fundamental es llegar a la \textbf{energía 
+	libre de Helmholtz!!!!} (ver sec. 3.3 Pathria)
+	
+	\item El formalismo del ensamble microcanónico y canónico son equivalentes.
+	
+	\item \textbf{Teorema de equipartición:} (revisar notas en Drive para la 
+	deducción matemática) cada término armónico en el Hamiltoniano 
+	transformado de un sistema contribuye $1/2kT$ a la energía 
+	interna del sistema. Dicho de otro modo, cada grado de libertad 
+	aporta la misma cantidad al valor esperado de la energía del sistema 
+	total. \textbf{No obstante}, el teorema de equipartición es válido 
+	para valores de temperatura muy altos, osea cuando los 
+	grados de libertad relevantes del sistema pueden 
+	ser excitados libremente.
+	
+	\item \textbf{Teorema del virial:} (revisar notas en Driva para la 
+	deducción) 
+	\begin{align}
+	-\expval{\sum_iq_i\dot{p_i}}=3NkT,
+	\end{align}
+	donde
+	\begin{align}
+	\mathcal{V}=-3NkT,
+	\end{align}
+	es	llamado el 'virial' del sistema.
+	Cuando se considera a un gas ideal esto se reduce a la relación 
+	clásica:
+	\begin{align}
+	\mathcal{V}=-2K,
+	\end{align}
+	con $K$ la energía cinética del sistema.
 \end{itemize}
