read electrostatic ch

--- a/notas.tex
+++ b/notas.tex
@@ -70,6 +70,8 @@
 \newcommand{\QH}{\abs{Q_H}}
 \newcommand{\QL}{\abs{Q_L}}
 \newcommand{\W}{\abs{W}}
+\newcommand{\uv}[1]{\vb{\hat{#1}}}
+\newcommand{\ep}{\epsilon_0}
 
 \def\dbar{{\mathchar'26\mkern-12mu d}}
 
@@ -110,6 +112,7 @@ Licenciatura en Física}
 
 \input{termo.tex}
 \input{stat-mec.tex}
+\input{electro.tex}
 
 
 \bibliographystyle{abbrv}
