--- a/electro.tex
+++ b/electro.tex
@@ -206,5 +206,17 @@ consideramos la integración sobre todo el espacio, y de esa manera,
 \begin{align}
 W&=\frac{\ep}{2}\int E^2d\tau.
 \end{align}
+
+\section{Potenciales}
+\subsection{El método de imágenes}
+\textbf{El problema:} supongamos una carga $q$ que se encuentra a 
+una distancia $d$ sobre un plano conductor infinito, ¿cuál es el potencial
+en una región por encima del plano?
+
+El punto es establecer cuáles son las condiciones de frontera del problema
+y luego encontrar una configuración equivalente que satisfaga dichas 
+condiciones de frontera, de esa manera, justificados en el teorema de 
+unicidad de las ecuaciones diferenciales, habremos encontrado 
+la solución al problema. 
 \end{itemize}
 
