--- a/apuntes/notas.tex
+++ b/apuntes/notas.tex
@@ -63,7 +63,7 @@
 \newcommand{\ten}{\otimes}
 \newcommand{\h}[1]{\colorbox{Yellow}{#1}}
 \newcommand{\hi}{\mathcal{H}}
-\newcommand{\txt}[1]{\text{#1}}
+\newcommand{\tx}[1]{\text{#1}}
 \newcommand{\here}{\h{\hspace{15cm}} }
 \newcommand{\rhoi}{\dyad{\psii}{\psii}}
 \newcommand{\ind}[2]{{{}^{#1}_{#2}}}
@@ -72,6 +72,7 @@
 \newcommand{\W}{\abs{W}}
 \newcommand{\uv}[1]{\vb{\hat{#1}}}
 \newcommand{\ep}{\epsilon_0}
+\renewcommand{\uv}[1]{\ \boldsymbol{\hat{#1}}}
 
 \def\dbar{{\mathchar'26\mkern-12mu d}}
 
